# delg-feature-extractor

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  entrypoint.py  experiment.py  pyproject.toml  test.py
delg/: __init__.py  client.py  config.py  config_global.pbtxt  config_local.pbtxt  datum_io.py  datum_pb2.py  delf_config_pb2.py  delg_features.py  docker_runner.py  extractor.py  feature_extractor.py  feature_pb2.py  model_weights.py  similarity.py  utils.py
delg.egg-info/: PKG-INFO
delg/model_configs/: config_global.pbtxt  config_local.pbtxt
delg/parameters/r50delg_gldv2clean_20200914/variables/: variables.index
