[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "delg"
version = "0.1.0"
description = "Dockerized DELG feature extractor with FastAPI and Python client."
authors = [
    { name = "Duje Giljanović", email = "giljanovic.duje@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests",
]

[tool.setuptools]
packages = ["delg"]

[tool.setuptools.package-data]
# include configs and model weights
"delg" = [
    "model_configs/*.pbtxt",
    "parameters/*",
    "parameters/variables/*",
]

dependencies = [
    "requests>=2.24.0",  # ✅ make this required
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn",
    "tensorflow-cpu",
    "pillow",
    "numpy",
    "protobuf"
]